feat: Markdown形式のコンテンツ処理機能の追加、依存パッケージの更新

--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-html": "^16.0.1",
     "typescript": "^5.8.2"
   }
 }
